[metadata]
name = tpRigToolkit-core
description = Framework that contains multiple tools to make rigs
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-core

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    pytest
    pytest-cov
    sentry-sdk
    coveralls==1.8.2; python_version>='3.6'
    coveralls==1.9.2; python_version<'3.6'
    sphinx
    sphinx_rtd_theme
    pyyaml
    tpPyUtils
    tpDccLib
    tpQtLib
    tpMayaLib
    tpNameIt

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1